--- a/src/resource/theme/index.css
+++ b/src/resource/theme/index.css
@@ -12,3 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#root, .tsui-layout {
+  height: 100%;
+}
