'标签页基本完成'

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,3 +1,11 @@
 .trigger-btn {
   margin-left: 10px;
 }
+
+.layout-content-main {
+  margin: 24px 16px;
+  padding: 24px;
+  background-color: #fff;
+  min-height: 280;
+  overflow: auto;
+}
