--- a/src/assets/theme/font.scss
+++ b/src/assets/theme/font.scss
@@ -1,17 +1,22 @@
 @font-face {
-  font-family: 'iconfont';  /* project id 1034459 */
-  src: url('//at.alicdn.com/t/font_1034459_4smxgdim3e9.eot');
-  src: url('//at.alicdn.com/t/font_1034459_4smxgdim3e9.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1034459_4smxgdim3e9.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1034459_4smxgdim3e9.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1034459_4smxgdim3e9.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1034459_4smxgdim3e9.svg#iconfont') format('svg');
+  font-family: 'anticon_user';  /* project id 1034459 */
+  src: url('//at.alicdn.com/t/font_1034459_3fc9u84gjte.eot');
+  src: url('//at.alicdn.com/t/font_1034459_3fc9u84gjte.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1034459_3fc9u84gjte.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1034459_3fc9u84gjte.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1034459_3fc9u84gjte.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1034459_3fc9u84gjte.svg#anticon_user') format('svg');
 }
-
-.iconfont{
-  font-family: "iconfont" !important;
+.anticon_user{
+  font-family: "anticon_user" !important;
   font-size: 16px;font-style:normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
+}
+
+:global(.anticon) {
+  &:before {
+    font-family: "anticon", "anticon_user" !important;
+  }
 }
