--- a/src/views/article/index.scss
+++ b/src/views/article/index.scss
@@ -1,6 +1,11 @@
-.tag-box {
-  .add-btn-wrap {
-    width: 400px;
-    margin-bottom: 20px;
+.article-box {
+  .tag-block {
+    display: inline-block;
+    padding: 4px 8px;
+    border-radius: 3px;
+    background-color: #409EFF;
+    color: #fff;
+    margin-left: 6px;
+    margin-bottom: 6px;
   }
 } 
