--- a/src/assets/theme/normalize.scss
+++ b/src/assets/theme/normalize.scss
@@ -16,3 +16,25 @@ code {
 #root, .tsui-layout {
   height: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 10px;
+}
+  
+/* 滚动槽 */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px #dfdfdf;
+  // background-color: #efefef;
+  border-radius: 11px;
+}
+    
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #d0d0d0;
+  // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #c0c0c0;
+}
